examples/passing/ExplicitImportReExport/Bar.purs
module Bar (module Foo) where

import Foo
