examples/failing/2378/Lib.purs
module Lib (class Foo) where

class Foo (a :: Symbol)
